hphp/hack/test/ifc/check/exceptions.php.exp
=== IFC analysis results for exceptions.php
File "exceptions.php", line 16, characters 3-18:
Data with policy `PRIVATE` appears in context `PUBLIC`. (Typing[4379])
  File "exceptions.php", line 5, characters 68-74:
  This may be the data source with policy `PRIVATE`
  File "exceptions.php", line 9, characters 67-73:
  This may be the data sink with policy `PUBLIC`
